programming-language/workspace/compiler/tests/fixtures/invalid/array_size_mismatch.cb64
# Cobra64 - Array size mismatch test
# Expected error: Array initializer has wrong number of elements

def main():
    arr: byte[3] = [1, 2, 3, 4, 5]
